[gd_scene load_steps=5 format=3 uid="uid://c7df3jx7d5apd"]

[ext_resource type="PackedScene" uid="uid://dthf1w0ueidsk" path="res://Character/Character.tscn" id="1_pm667"]
[ext_resource type="Script" uid="uid://bxr6u8tbxg3dw" path="res://Character/Enemy/Enemy2.gd" id="2_2qdt8"]
[ext_resource type="Texture2D" uid="uid://kn1pca1aae5l" path="res://Character/Enemy/Spotted!.png" id="3_pvlxk"]
[ext_resource type="Texture2D" uid="uid://dn3q5utcq5h4b" path="res://Character/Enemy/EnemyPNG.png" id="4_2qdt8"]

[node name="Enemy" instance=ExtResource("1_pm667")]
script = ExtResource("2_2qdt8")

[node name="Spotted" type="Sprite3D" parent="." index="1"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 1.75, 0)
billboard = 2
texture_filter = 0
texture = ExtResource("3_pvlxk")

[node name="Body" type="Sprite3D" parent="." index="2"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
billboard = 2
alpha_scissor_threshold = 0.0
alpha_hash_scale = 0.0
texture_filter = 0
texture = ExtResource("4_2qdt8")
hframes = 5
vframes = 3

[node name="ProjectileSpawnLocation" type="Node3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.24)

[node name="DetectionTimer" type="Timer" parent="." index="4"]
wait_time = 2.0

[node name="AttackCooldown" type="Timer" parent="." index="5"]

[node name="ObstructionCheck" type="RayCast3D" parent="." index="6"]

[node name="AnimationTimer" type="Timer" parent="." index="7"]

[connection signal="timeout" from="DetectionTimer" to="." method="_DetectionTimerOver"]
[connection signal="timeout" from="DetectionTimer" to="." method="_on_detection_timer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_Attack"]
[connection signal="timeout" from="AnimationTimer" to="." method="_Animation"]
